# anon-tool

./: .gitignore  QUICKSTART.md  README.md  case_02981447.extracted.txt  case_02981447.first200.txt  pyproject.toml  sample.validate.report.json  sample.validate.sanitized.txt
C/Users/dbush/Downloads/: 10-MB-Test.chatgpt.txt
scripts/: launch_web.ps1  run_batch.ps1  validate_case.ps1
src/anon_tool/: __init__.py  cli.py  types.py  web.py
src/anon_tool.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/anon_tool/ingest/: __init__.py  docx_reader.py  pdf_reader.py  txt_reader.py
src/anon_tool/logging/: __init__.py  audit.py
src/anon_tool/output/: __init__.py  markdown_writer.py  pdf_writer.py  report_writer.py
src/anon_tool/redaction/: __init__.py  engine.py
src/anon_tool/rules/: __init__.py  policy_profile_opentext.py
tests/: test_engine.py  test_input_readers.py  test_markdown_writer.py  test_web.py
